Updated docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   gitlab-server:
-    image: gitlab/gitlab-ce:latest
+    image: gitlab/gitlab-ce:11.10.4-ce.0
     restart: always
     hostname: 'localhost'
     volumes:
@@ -11,7 +11,7 @@ services:
       - ./data/git:/var/opt/gitlab
     environment:
       - GITLAB_OMNIBUS_CONFIG=${GITLAB_OMNIBUS_CONFIG}
-    network_mode: host
+    #network_mode: host
     ports:
       - 1022:22
       - 8080:80
